@@ -10,7 +10,7 @@ __description__ = "NetPerfect Backup Client"
 __copyright__ = "Copyright (C) 2022-2025 NetInvent"
 __license__ = "GPL-3.0-only"
 __build__ = "2025092901"
-__version__ = "3.0.4-rc1"
+__version__ = "3.0.4"
 
 
 import sys
